--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2381,7 +2381,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: url(http://brittanychiang.com/img/404-bg.jpg)
+    background-image: url(img/404-bg.jpg)
 }
 
 .four-oh-four #particles-js:before {
