--- a/australie/style.css
+++ b/australie/style.css
@@ -1,35 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
-*{
-  box-sizing: border-box;
-}
-
 body, html {
    font-family: 'Roboto Slab', serif;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0;
 }
 
+html,
 body {
-    background-color: #D2DBDD;
-    display: flex;
-    display: -webkit-flex;
-    -webkit-justify-content: center;
-    -webkit-align-items: center;
+    height: 100%;
+}
+
+.container {
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
-.cards {
-    width: 100%;
-    display: flex;
-    display: -webkit-flex;
-    justify-content: center;
-    -webkit-justify-content: center;
-    max-width: 820px;
+body {
+    background-color: #D2DBDD !important;
 }
 
 .card--1 .card__img, .card--1 .card__img--hover {
@@ -95,17 +83,15 @@ body {
     border-top-right-radius: 12px;
     top: 0;
 }
-.card {
-    margin-right: 25px;
+.section-card {
     transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
     background-color: #fff;
-    width: 33.3%;
     position: relative;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
 }
-.card:hover {
+.section-card:hover {
     box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
     transform: scale(1.1, 1.1);
 }
@@ -145,17 +131,12 @@ body {
     color: #AD7D52;
 }
 
-/* .card:hover .card__img--hover {
-    height: 100%;
-    opacity: 0.3;
-} */
-
-.card:hover .card__info {
+.section-card:hover .card__info {
     background-color: transparent;
     position: relative;
 }
 
-.card:hover .card__info-hover {
+.section-card:hover .card__info-hover {
     opacity: 1;
 }
 
